[package]
name = "pulse_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
openssl = { version = "0.10", features = ["vendored"] }
pulse_nyct = { path = "../pulse_nyct" }
pulse_parser = { path = "../pulse_parser" }
pulse_protos = { path = "../pulse_protos" }
